--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -164,31 +164,68 @@ button.light-theme{
 }
 
 @media (max-width: 768px) {
-  .buttons.menu-closed {
-    opacity: 0;
-    overflow: hidden;
-    gap: 0;
-    transform: translateX(100%);
-    transition: transform 0.4s ease;
+  @media (max-width: 768px) {
+    .buttons {
+      position: absolute;
+      flex-direction: column;
+      right: 0;
+      top: 72px;
+      gap: 0;
+      margin-right: 0;
+      background-color: #161719;
+      height: 350px;
+      overflow: hidden;
+      transition: opacity 0.5s ease, transform 0.5s ease;
+    }
+
+    .hamburger-menu {
+      position: relative;
+      display: block;
+      margin-right: -10px;
+    }
+
+    .buttons.menu-closed {
+      width: 200px;
+      border: 1px solid #CFAA7A;
+      border-top-left-radius: 0px;
+      border-top-right-radius: 0px;
+      border-bottom-left-radius: 10px;
+      border-bottom-right-radius: 10px;
+      opacity: 0;
+      transform: translateX(100%);
+    }
+
+    .buttons.menu-open {
+      opacity: 1;
+      transform: translateX(0);
+    }
   }
-  .hamburger-menu {
-    position: relative;
-    display: block;
-    margin-right: -10px;
-  }
-  .buttons.menu-open {
-    position: absolute;
-    right: 0px;
-    top: 72px;
-    gap: 0;
-    margin-right: 0;
-    background-color: #161719;
-    opacity: 1;
-    height: 350px;
-    overflow: hidden;
-    transform: translateX(0);
-    transition: opacity 0.5s ease, transform 0.5s ease;
-  }
+
+  // .buttons.menu-closed {
+  //   opacity: 0;
+  //   overflow: hidden;
+  //   gap: 0;
+  //   transform: translateX(0);
+  //   transition: transform 0.4s ease, opacity 0.4s ease;
+  // }
+  // .hamburger-menu {
+  //   position: relative;
+  //   display: block;
+  //   margin-right: -10px;
+  // }
+  // .buttons.menu-open {
+  //   position: absolute;
+  //   right: 0px;
+  //   top: 72px;
+  //   gap: 0;
+  //   margin-right: 0;
+  //   background-color: #161719;
+  //   opacity: 1;
+  //   height: 350px;
+  //   overflow: hidden;
+  //   transform: translateX(0);
+  //   transition: opacity 0.5s ease, transform 0.5s ease;
+  // }
   .choix {
     position:absolute;
     top:2vh;
