--- a/src/styles/MainContent.scss
+++ b/src/styles/MainContent.scss
@@ -281,6 +281,8 @@ input {
 }
 .projectPicture{
   border-radius: 8px 8px 0 0;
+  width: 300px;
+  height: 300px;
 }
 .projectTitle{
   text-align: center;
@@ -408,5 +410,21 @@ input {
     width: 280px;
     padding: 5px;
     text-align: center;
+  }
+}
+
+@media (max-width: 319px) {
+  .individualProjectContainer{
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .myProjectsContainer{
+    width: 298px;
+  }
+}
+
+@media (min-width: 319px){
+  .projectPicture{
+    width: 100%;
   }
 }
