--- a/src/styles/MainContent.scss
+++ b/src/styles/MainContent.scss
@@ -8,87 +8,6 @@ main.light-theme{
   color: var(--text-color-light);
 }
 
-// .accueil {
-//   position: relative;
-//   display: flex;
-//   width: 100%;
-//   gap: 0;
-//   justify-content: center;
-//   align-items: center;
-//   margin: 250px 0 200px;
-//   height: auto;
-// }
-
-// .pitch {
-//   position: relative;
-//   display: flex;
-//   width: 25vw;
-//   min-width: 280px;
-//   max-width: 400px;
-//   flex-direction: column;
-//   gap: 30px;
-//   align-items: flex-start;
-//   justify-content: center;
-//   background: radial-gradient(#26282b,#181B1F);
-//   border-radius: 20px;
-//   box-shadow: 0 20px 25px -5px rgba(90,90,90,.1), 0 8px 10px -6px hsla(0,0%,43%,.1);
-//   padding: 20px;
-//   border: 1px solid #CFAA7A;
-// }
-
-// .pitch.light-theme{
-//   background: radial-gradient(whitesmoke,white);
-//   color: #26282b;
-// }
-
-// .pitch h1 {
-//   margin: 0;
-//   font-weight: 700;
-//   font-size: 3rem;
-//   color: #CFAA7A;
-// }
-// .pitch h2 {
-//   margin: 0;
-// }
-// .pitch p {
-//   margin: 0;
-// }
-
-// .icon {
-//   display: flex;
-//   justify-content: space-around;
-//   gap: 40px;
-// }
-
-// .icon i {
-//   font-size: 5rem;
-//   color: #CFAA7A;
-//   transition: transform 0.3s ease;
-// }
-
-// .icon i:hover{
-//   transform: scale(1.20);
-// }
-
-// .line{
-//   height: 0px;
-//   width: 10vw;
-//   left: 0;
-//   position: relative;
-//   background-repeat: no-repeat;
-//   border: 1px solid #CFAA7A;
-// }
-
-// .profilePicture{
-//   border-radius: 50%;
-//   width: 40vw;
-//   height: 100%;
-//   max-width: 400px;
-//   min-width: 250px;
-//   object-fit: contain;
-//   border: 2px double #CFAA7A;
-//   z-index: 1;
-// }
 /* CSS initial */
 .accueil {
   position: relative;
@@ -520,20 +439,30 @@ input {
 
 @media (max-width: 768px) {
   .accueil {
-    margin: 150px 0 110px;
+    margin: 150px 0 100px;
     flex-direction: column-reverse;
+    width: 100%;
+  }
+  .pitchArea{
+    background-color: #CFAA7A;
+    background-image: var(--test);
+    background-repeat: no-repeat;
+    background-size: 0 1px, 0 100%, 0% 1px;
+    margin-left: 20px;
+    margin-right: 20px;
+    animation: 2s drawBorderFromTop 1.5s backwards;
+    border-radius: 20px;
   }
   .pitch {
-    width: 80%;
-    margin-top: 78px;
+    width: 100%;
   }
   .profilePicture {
     width: 40vw;
   }
   .line {
-    transform: rotate(90deg);
-    top: 39px;
-    width: 78px;
+    width: 1px;
+    height: 70px;
+    animation: 1s lineHorizontalGrow 0.5s forwards;
   }
   .skills{
     gap: 75px;
@@ -561,10 +490,15 @@ input {
 }
 
 @media (max-width: 425px) {
+
   .pitch{
     width: 280px;
     padding: 5px;
     text-align: center;
+  }
+  .icon{
+    width: 100%;
+    gap: 0px;
   }
 }
 
