--- a/src/styles/MainContent.scss
+++ b/src/styles/MainContent.scss
@@ -389,7 +389,9 @@ input {
   padding: 0 10px 10px;
   border-radius: 8px;
 }
-
+.projectSkills img{
+  width: 24px;
+}
 .aboutProject {
   display: flex;
   flex-direction: column;
